use maxilib to create the sound

--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -4,21 +4,31 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
+  <script src="http://doc.gold.ac.uk/~mus02mg/_maxiLib.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="TimeLine.js"></script>
   <script language="javascript" type="text/javascript" src="Square.js"></script>
   <script language="javascript" type="text/javascript" src="Metro.js"></script>
   <script language="javascript" type="text/javascript" src="soundEngine.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="max.js"></script>
+
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
 
 <body>
-  <p>Here is my sketch:</p>
+  <h1>A/V Lab live</h1>
+  <p>there are 4 boxes : </p>
+  <ol>
+    <li>the pitch of sound 1</li>
+    <li>the amplitude fo sound 1</li>
+    <li>the pitch of sound 2</li>
+    <li>the amplitude fo sound 2</li>
+  </ol>
+  <p>press 1~4 and dragged to adjust the position of boxes.</p>
   <div id="sketch-holder">
     <!-- Our sketch will go here! -->
   </div>
-  <p>Pretty cool, eh?</p>
 </body>
 </html>
