--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -8,7 +8,7 @@
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="TimeLine.js"></script>
   <script language="javascript" type="text/javascript" src="Square.js"></script>
-  <script language="javascript" type="text/javascript" src="Metro.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="Metro.js"></script> -->
   <script language="javascript" type="text/javascript" src="soundEngine.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <script language="javascript" type="text/javascript" src="max.js"></script>
