--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <script language="javascript" type="text/javascript" src="libraries/maxiLib.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
-  <script language="javascript" src="libraries/_maxiLib.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="TimeLine.js"></script>
   <script language="javascript" type="text/javascript" src="Square.js"></script>
