--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -26,7 +26,7 @@
     <li>the pitch of sound 2</li>
     <li>the amplitude fo sound 2</li>
   </ol>
-  <p>press 1~4 and dragged to adjust the position of boxes.</p>
+  <p>press 1~4 and dragged to adjust the position of boxes.(master)</p>
   <div id="sketch-holder">
     <!-- Our sketch will go here! -->
   </div>
