--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -67,6 +67,8 @@
 
 <body>
   <h1>A/V Lab live</h1>
+  <div id="sketch-holder"></div>
+  
   <div id="main">
     <div >
       <p>(created by Vibert Thio, based on Aluan Wang's work)</p>
@@ -82,8 +84,5 @@
   </div>
 
 
-  <div id="sketch-holder">
-    <!-- Our sketch will go here! -->
-  </div>
 </body>
 </html>
