change the color design

--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -22,7 +22,7 @@
   <style>
     html {
       /*background-color: #AAAAAA;*/
-      background-color: #2980b9;
+      background-color: #2E4053;  
       font-size: 10px; /* px means 'pixels': the base font size is now 10 pixels high  */
       font-family: 'Open Sans', sans-serif;
     }
@@ -34,7 +34,7 @@
     }
 
     h1 {
-      color: #34495e;
+      color: #CCCCCC;
       font-size: 65px;
       text-align: center;
     }
@@ -45,7 +45,7 @@
     }
 
     p, li {
-      color: #34495e;
+      color: #CCCCCC;
       font-size: 16px;
       line-height: 2;
       letter-spacing: 1px;
@@ -68,7 +68,7 @@
 <body>
   <h1>A/V Lab live</h1>
   <div id="sketch-holder"></div>
-  
+
   <div id="main">
     <div >
       <p>(created by Vibert Thio, based on Aluan Wang's work)</p>
