--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         type='text/css'>
   <title>A/V Lab live</title>
 
-  <script language="javascript" type="text/javascript" src="beatSelector/js/libraries/maxiLib.js"></script>
-  <script language="javascript" type="text/javascript" src="beatSelector/js/libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/libraries/maxiLib.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/libraries/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
-  <script language="javascript" src="beatSelector/js/libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="beatSelector/js/TimeLine.js"></script>
-  <script language="javascript" type="text/javascript" src="beatSelector/js/Square.js"></script>
+  <script language="javascript" src="./beatSelector/js/libraries/p5.sound.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/TimeLine.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/Square.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="Metro.js"></script> -->
-  <script language="javascript" type="text/javascript" src="beatSelector/js/soundEngine.js"></script>
-  <script language="javascript" type="text/javascript" src="beatSelector/js/sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="beatSelector/js/max.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/soundEngine.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="./beatSelector/js/max.js"></script>
 
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style>
