--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans'
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans'
         rel='stylesheet'
         type='text/css'>
   <title>A/V Lab live</title>
