--- a/beatSelector/js/index.html
+++ b/beatSelector/js/index.html
@@ -24,7 +24,7 @@
   <style>
     html {
       /*background-color: #AAAAAA;*/
-      background-color: #2E4053;  
+      background-color: #2E4053;
       font-size: 10px; /* px means 'pixels': the base font size is now 10 pixels high  */
       font-family: 'Open Sans', sans-serif;
     }
@@ -69,6 +69,7 @@
 
 <body>
   <h1>A/V Lab live</h1>
+  <div id="sketch-holder"></div>
 
 
   <div id="main">
