--- a/webvr/AFrame/index.html
+++ b/webvr/AFrame/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="js/jquery-1.8.2.min.js"></script>
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="js/script.js"></script>
   </head>
 
   <body>
 
-    <a-scene>
+    <a-scene class='scene'>
       <a-assets>
         <img id="textureOfBox" src="https://c1.staticflickr.com/3/2586/4188373188_a02e4160c6_b.jpg">
         <img id="textureOfSky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
         <img id="textureOfGround" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
       </a-assets>
 
-      <a-sky src="#textureOfSky"></a-sky>
+      <a-sky class='sky' src="#textureOfSky"></a-sky>
 
-      <a-box src="#textureOfBox"
-             opacity="1"
-             position="0 2 -5"
-             sclae="1 1 1"
-             rotation="0 45 45">
-             <a-animation attribute="position" to="0 2.2 -5" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 
-             <a-animation attribute="scale" begin="mouseenter" dur="300" to="1.3 1.3 1.3"></a-animation>
-             <a-animation attribute="scale" begin="mouseleave" dur="300" to="1 1 1"></a-animation>
-             <!-- <a-animation attribute="rotation" begin="click" dur="2000" to="360 405 45"></a-animation> -->
-      </a-box>
-
-      </a-box>
 
       <a-plane src="#textureOfGround"
                rotation="-90 0 0"
@@ -43,5 +28,9 @@
       </a-camera>
 
     </a-scene>
+
   </body>
+  <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/changeColorOfBox.js"></script>
 </html>
