--- a/webvr/AFrame/index.html
+++ b/webvr/AFrame/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
@@ -31,6 +32,9 @@
 
   </body>
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+  <script src="js/_maxiLib.js"></script>
   <script src="js/script.js"></script>
   <script src="js/changeColorOfBox.js"></script>
+  <script src="js/sequencer.js"></script>
+
 </html>
