implement the metro
add the metro of js.
add the basic sequencer in webvr.

--- a/webvr/AFrame/index.html
+++ b/webvr/AFrame/index.html
@@ -32,9 +32,8 @@
 
   </body>
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-  <script src="js/_maxiLib.js"></script>
   <script src="js/script.js"></script>
   <script src="js/changeColorOfBox.js"></script>
-  <script src="js/sequencer.js"></script>
+  <script src="js/metro.js"></script>
 
 </html>
