--- a/webvr/AFrame/index.html
+++ b/webvr/AFrame/index.html
@@ -34,6 +34,7 @@
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/changeColorOfBox.js"></script>
+  <script src="js/unlock.js"></script>
   <script src="js/metro.js"></script>
 
 </html>
