Open Web Audio on iOS finish the work, some problems solved.

--- a/webvr/AFrame/index.html
+++ b/webvr/AFrame/index.html
@@ -12,7 +12,7 @@
         <img id="textureOfSky" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
         <img id="textureOfGround" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
       </a-assets>
-
+to
       <a-sky class='sky' src="#textureOfSky"></a-sky>
 
 
@@ -34,7 +34,7 @@
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/changeColorOfBox.js"></script>
-  <script src="js/unlock.js"></script>
+  <script src="js/bundle.js"></script>
   <script src="js/metro.js"></script>
 
 </html>
