Sample in Web Audio
-finish loading sample in web audio
-merge the function into WebVR scene

--- a/webvr/AFrame/demo2.html
+++ b/webvr/AFrame/demo2.html
@@ -5,6 +5,7 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
     <script src="https://rawgit.com/mayognaise/aframe-gif-component/master/dist/aframe-gif-component.min.js"></script>
+    <script src="js/audio-sample-loader"></script>
   </head>
 
   <body>
@@ -52,7 +53,7 @@
         geometry="primitive:box"
         material="shader:gif; src:url(https://static.wixstatic.com/media/ce4176_0cae568e79384307a5580d45973e06be.gif);"
         gif=""
-        position="0 2 -10"
+        position="0 2 -15"
         scale="3 3 3"
         >
       </a-entity>
@@ -83,7 +84,7 @@
     </a-scene>
 
   </body>
-  <script src="js/create-boxes-grid.js"></script>
+  <script src="js/create-boxes-round.js"></script>
   <script src="js/change-color-of-box.js"></script>
   <script src="js/bundle.js"></script>
   <script src="js/metro.js"></script>
