add arpy function to webvr

--- a/webvr/load-sample/index.html
+++ b/webvr/load-sample/index.html
@@ -84,10 +84,11 @@
     </a-scene>
 
   </body>
-  <script src="js/create-boxes-round.js"></script>
-  <script src="js/change-color-of-box.js"></script>
-  <script src="js/bundle.js"></script>
-  <script src="js/load-sample.js"></script>
-  <script src="js/metro.js"></script>
+  <script src="./js/create-boxes-multiple-grid.js"></script>
+  <script src="./js/change-color-of-box.js"></script>
+  <script src="./js/bundle.js"></script>
+  <script src="./js/load-sample.js"></script>
+  <script src="./js/tracks.js"></script>
+  <script src="./js/metro.js"></script>
 
 </html>
